--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -1,3 +1,4 @@
 <h1>Profile#edit</h1>
+<%= render "users/shared/error_messages", resource: @user %>
 <p>Find me in app/views/profile/edit.html.erb</p>
 <%= render  "profile/shared/form" %>
