--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,13 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-  <% if flash[:notice]%>
-  <div id='notice'><%= flash[:notice] %></div>
-  <% end %>
+    <% if flash[:notice]%>
+      <div id='notice'><%= flash[:notice] %></div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
