--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,17 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_packs_with_chunks_tag 'application' %>
+    <%= stylesheet_packs_with_chunks_tag 'application' %>
   </head>
 
   <body>
-    <% if flash[:notice]%>
-      <div id='notice'><%= flash[:notice] %></div>
-    <% end %>
-    <%= yield %>
+        <div class="container">
+            <% if flash[:notice]%>
+            <div id='notice'><%= flash[:notice] %></div>
+            <% end %>
+            <%= yield %>
+        </div>
+    
   </body>
 </html>
