--- a/app/views/notes/shared/_note_form.html.erb
+++ b/app/views/notes/shared/_note_form.html.erb
@@ -1,18 +1,22 @@
 <%= form_for @note do |form| %>
-  <div class="field">
-    <%= form.label :title %>
+  <div class="field mt-3">
+    <%= form.label :title, class:"form-label"%>
     <%= form.rich_text_area :title %>
   </div>
-  <div class="field">
-    <%= form.label :description %>
+  <div class="field mt-3">
+    <%= form.label :description, class:"form-label" %>
     <%= form.rich_text_area :description %>
   </div>
-  <div>
-    <%= form.label :public %>
-    <% {true: true, false: false}.each do |key, value| %>
-        <%= form.radio_button :public, key %> <%= value %> <br>
-    <% end %> 
+  <div class="mt-4 form-check">
+      <%= form.label :public, 
+                     class:"form-check-label", 
+                     'data-bs-toggle':"tooltip", 
+                     'data-bs-placement':"top",  
+                     title:"Se não definir a nota como pública, ela será visível apenas para você."
+      %>
+      <%= form.check_box :public, class:"form-check-input" %> 
   </div>
-   <%= form.submit nil %>
+  
+  <%= form.submit nil, class: "btn btn-indigo mt-1" %>
 
 <% end %>
