--- a/app/views/profile/shared/_form.html.slim
+++ b/app/views/profile/shared/_form.html.slim
@@ -1,20 +1,22 @@
 = form_for @user, url: profile_path do |form|
-  .field
-    = form.label :nickname
-    = form.text_area :nickname
-  .field
-    = form.label :name
-    = form.text_area :name
-  .field
+  .row.mt-3
+    .col
+      = form.label :nickname
+      = form.text_field :nickname, class: "form-control"
+    .col
+      = form.label :name
+      = form.text_field :name, class: "form-control"
+  .mt-3
     = form.label :email
-    = form.email_field :email
-  .field
-    = form.label :password
-    = form.password_field :password
-  .field
-    = form.label :confirm_password
-    = form.password_field :confirm_password
-  .field
+    = form.email_field :email, class: "form-control"
+  .row.mt-3
+    .col
+      = form.label :password
+      = form.password_field :password, class: "form-control"
+    .col
+      = form.label :password_confirmation
+      = form.password_field :password_confirmation, class: "form-control"
+  .mt-3
     = form.label :url_image
-    = form.text_area :url_image
-  = form.submit nil
+    = form.text_field :url_image, class: "form-control"
+  = form.submit nil, class: "mt-3 btn btn-indigo"
